// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Проверка кнопки Кнопка активна 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  data-testid="button"
  type="button"
>
  <p
    className="text undefined"
  >
    кнопка
  </p>
</button>
`;

exports[`Проверка кнопки Кнопка без текста 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  data-testid="button"
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Проверка кнопки Кнопка не активна 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  data-testid="button"
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  >
    кнопка
  </p>
</button>
`;

exports[`Проверка кнопки Лоадер на кнопке 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  data-testid="button"
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;
